# boilerworks-fastapi-nextjs

./: .build-complete  .gitignore  AGENTS.md  CALLIOPE.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  SECURITY.md  bootstrap.md  docker-compose.yaml  memory.md  run.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yaml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: cd1a95651e15_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  health.py  items.py  products.py
backend/app/auth/: dependencies.py
backend/app/graphql/: context.py  mutations.py  queries.py  schema.py  types.py
backend/app/models/: __init__.py  base.py  item.py  product.py  user.py
backend/app/schemas/: auth.py  common.py  item.py  product.py
backend/app/tests/: conftest.py  test_auth.py  test_graphql.py  test_items.py  test_products.py
frontend/: .env.example  CLAUDE.md  README.md  package-lock.json  package.json
frontend/app/(app)/: layout.tsx
frontend/components/: AppSidebar.tsx  DataTable1.tsx  NavUser.tsx
frontend/components/workflows/: WorkflowBuilder.tsx
frontend/graphql/employees/: employees.queries.ts  employees.types.ts
frontend/graphql/workflows/: workflows.types.ts
frontend/lib/: routes.ts
frontend/lib/apollo/: client.ts  provider.tsx
frontend/lib/auth/: auth0.ts
frontend/messages/: de.json  en.json  es.json  fr.json  it.json  pl.json  pt.json
frontend/src/app/: layout.tsx  page.tsx
(+15 files in other folders)
